# QueryStockAI

./: .gitignore  Dockerfile  Home.py  RAILWAY_DEPLOYMENT.md  README.md  agent_client.py  main.py  mcp_config.json  mcp_news_server.py  mcp_stock_server.py  news_server.py  pyproject.toml  railway.toml  requirements.txt  resource_monitor.py  simple_mcp_test.py  start_services.py  stock_data_server.py  streamlit_app.py  terminal_client.py  test_deployment.py  test_prophet_accuracy.py  update_mcp_urls.py
pages/: System_Monitor.py
