[project]
name = "financial-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastmcp>=2.10.6",
    "gnews>=0.4.1",
    "mcp[cli]>=1.12.2",
    "openai>=1.97.1",
    "pandas>=2.3.1",
    "plotly>=5.17.0",
    "prophet>=1.1.7",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.28.0",
    "transformers[torch]>=4.54.0",
    "yfinance>=0.2.65",
]
